samples/_failures_safe/1761212717_a10da9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25f4e0a4.c: In function ‘main’:
./samples/SAFE/__tmp_25f4e0a4.c:161:47: error: expected ‘)’ at end of input
  161 |         if (scanf("%d %d %d", &u, &v, &weight)
      |            ~                                  ^
      |                                               )
./samples/SAFE/__tmp_25f4e0a4.c:161:9: error: expected declaration or statement at end of input
  161 |         if (scanf("%d %d %d", &u, &v, &weight)
      |         ^~
./samples/SAFE/__tmp_25f4e0a4.c:161:9: error: expected declaration or statement at end of input
